k8s/sample/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dadras-ingress-chabok
  namespace: chabok
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - dadras.lawyerchabok.ir
      secretName: kapp-dadras-tls
  rules:
    - host: dadras.lawyerchabok.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dadras-web-service
                port:
                  number: 80
